# GlGraphics2D

./: .clang-format  CMakeLists.txt  Readme.md
Assets/Shaders/Line/: Line.frag  Line.geom  Line.vert
Assets/Shaders/Polygon/: Polygon.geom  Polygon.vert
Assets/Shaders/Rect/: Rect.frag  Rect.geom  Rect.vert
Include/: Attribute.h  FileUtils.h  Graphics.h  Line.h  Polygon.h  Rect.h  Shader.h
Source/: FileUtils.cpp  Shader.cpp  main.cpp
